# HumanObstacleDetector

./: .travis.yml  CMakeLists.txt  Doxyfile  LICENSE.txt  readme.md
Docs/html/: annotated.html  classData-members.html  classData.html  classDetection-members.html  classDetection.html  classLocator-members.html  classLocator.html  classProgramOptions-members.html  classProgramOptions.html  classes.html  data_8cpp.html  data_8cpp__incl.map  data_8cpp__incl.md5  data_8hpp.html  data_8hpp__dep__incl.map  data_8hpp__dep__incl.md5  data_8hpp__incl.md5  data_8hpp_source.html  data__test_8cpp.html  data__test_8cpp__incl.map  data__test_8cpp__incl.md5  detection_8cpp.html  detection_8cpp__incl.map  detection_8cpp__incl.md5  detection_8hpp.html  detection_8hpp__dep__incl.map  detection_8hpp__dep__incl.md5  detection_8hpp__incl.map  detection_8hpp__incl.md5  detection_8hpp_source.html  detection__test_8cpp.html  detection__test_8cpp__incl.map  detection__test_8cpp__incl.md5  dir_000000_000002.html  dir_000001_000002.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  (+30 more)
Docs/latex/: annotated.tex  classData.tex  classDetection.tex  classLocator.tex  classProgramOptions.tex  data_8cpp.tex  data_8cpp__incl.md5  data_8hpp.tex  data_8hpp__dep__incl.md5  data_8hpp__incl.md5  data__test_8cpp.tex  data__test_8cpp__incl.md5  detection_8cpp.tex  detection_8cpp__incl.md5  detection_8hpp.tex  detection_8hpp__dep__incl.md5  detection_8hpp__incl.md5  detection__test_8cpp.tex  detection__test_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_d422163b96683743ed3963d4aac17747.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  locator_8cpp.tex  refman.tex  (+13 more)
Results/: cppcheck.txt  cpplint.txt
app/: CMakeLists.txt  data.cpp  detection.cpp  locator.cpp  main.cpp  program_options.cpp
include/: data.hpp  detection.hpp  locator.hpp  program_options.hpp
test/: CMakeLists.txt  data_test.cpp  detection_test.cpp  locator_test.cpp  main.cpp  program_options_test.cpp
(+19 files in other folders)
